Added patent to news

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
           <h1>News</h1>
           <div>
               <table>
+                   <tr>
+                    <td><strong>Jan 10, 2025</strong></td>
+                    <td>Patent on Smart Glasses for Visually Impaired Individuals published</td>
+                </tr>
                   <tr>
                     <td><strong>Nov 25, 2024</strong></td>
                     <td>Paper on Retinal blood vessel segmentation accepted to Springer ICISSC'24</td>
@@ -113,7 +117,7 @@
         <div class="false-div"></div>
         <footer class="footer">
           <div class="footer-content">
-              <p>&copy; 2024 Abhiram Dodda. All rights reserved. Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>. Last updated: January 1, 2025.</p>
+              <p>&copy; 2024 Abhiram Dodda. All rights reserved. Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>. Last updated: January 16, 2025.</p>
           </div>
         </footer>
         
